updated names for phuket

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -10,7 +10,7 @@
       для отдыха, пляж, дешевые билеты, отель и экскурсии. Что посмотреть и
       куда сходить?"
     />
-    <link rel="stylesheet" href="./style/phuket/phuket.css" />
+    <link rel="stylesheet" href="./style/pattaya/pattaya.css" />
     <link
       rel="stylesheet"
       href="../styles/global-styles/Content-titles/content-title.style.css"
@@ -104,7 +104,15 @@
         </li>
       </ul>
     </div>
-    <header>
+    <header
+      style="
+        background: url(../../../assets/articles/phuket/header.jpg);
+        background-attachment: fixed;
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
+      "
+    >
       <nav class="phone-nav">
         <a href="https://www.y-flights.com">
           <img src="../../assets/logo.svg" alt="y-flights" class="logo-phone" />
@@ -158,7 +166,9 @@
           <ol class="content-title-ol-main">
             <!-- 1 -->
             <li class="content-title-li-main">
-              <a href="#Краткий-обзор-острова-Пхукет" class="text-link"> Краткий обзор острова Пхукет </a>
+              <a href="#Краткий-обзор-острова-Пхукет" class="text-link">
+                Краткий обзор острова Пхукет
+              </a>
             </li>
             <!-- 2 -->
             <li class="content-title-li-main">
@@ -168,59 +178,85 @@
               <ul class="content-title-ul-sub">
                 <li class="content-title-li-sub margin-left-3rem">
                   2.1
-                  <a href="#Почему-стоит-поехать-на-Пхукет" class="text-link"
-                    >Почему стоит поехать на Пхукет</a
-                  >
+                  <a href="#Почему-стоит-поехать-на-Пхукет" class="text-link">
+                    Почему стоит поехать на Пхукет
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.2 <a href="#Когда-ехать" class="text-link">Когда ехать</a>
+                  2.2
+                  <a href="#Когда-ехать" class="text-link">Когда ехать</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.3 <a href="#Как-добраться" class="text-link">Как добраться</a>
+                  2.3
+                  <a href="#Как-добраться" class="text-link">Как добраться</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
                   2.4
-                  <a href="#Какой-пляж-Пхукета-выбрать" class="text-link">Какой пляж Пхукета выбрать</a>
+                  <a href="#Какой-пляж-Пхукета-выбрать" class="text-link">
+                    Какой пляж Пхукета выбрать
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.5 <a href="#Какое-выбрать-жилье" class="text-link">Какое выбрать жилье</a>
+                  2.5
+                  <a href="#Какое-выбрать-жилье" class="text-link">
+                    Какое выбрать жилье
+                  </a>
                 </li>
               </ul>
             </li>
             <!-- 3 -->
             <li class="content-title-li-main">
-              <a href="#Отдых-на-острове" class="text-link"> Отдых на острове: </a>
+              <a href="#Отдых-на-острове" class="text-link">
+                Отдых на острове:
+              </a>
 
               <ul class="content-title-ul-sub">
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.1 <a href="Трансфер-в-отель" class="text-link">Трансфер в отель</a>
+                  3.1
+                  <a href="Трансфер-в-отель" class="text-link">
+                    Трансфер в отель
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.2 <a href="#Городской-транспорт" class="text-link">Городской транспорт</a>
+                  3.2
+                  <a href="#Городской-транспорт" class="text-link">
+                    Городской транспорт
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
                   3.3
-                  <a href="#Достопримечательности-и-чем-заняться" class="text-link"
-                    >Достопримечательности и чем заняться</a
+                  <a
+                    href="#Достопримечательности-и-чем-заняться"
+                    class="text-link"
                   >
+                    Достопримечательности и чем заняться
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.4 <a href="#Питание-на-острове" class="text-link">Питание на острове</a>
+                  3.4
+                  <a href="#Питание-на-острове" class="text-link">
+                    Питание на острове
+                  </a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.5 <a href="#Пхукет-на-карте" class="text-link">Пхукет на карте</a>
+                  3.5
+                  <a href="#Пхукет-на-карте" class="text-link">
+                    Пхукет на карте
+                  </a>
                 </li>
               </ul>
             </li>
           </ol>
         </div>
 
-        <h2 id="Краткий-обзор-острова-Пхукет" class="h2">Краткий обзор острова Пхукет</h2>
+        <h2 id="Краткий-обзор-острова-Пхукет" class="h2">
+          Краткий обзор острова Пхукет
+        </h2>
 
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img1.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="Таиланд Пхукет"
             class="section-1-img"
           />
         </div>
@@ -245,15 +281,16 @@
           Не думайте, что Пхукет – курорт только для пляжного отдыха! Дайвинг,
           джампинг, мотокросс, джиппинг, катание на слонах – это лишь малая
           часть того, что может предложить один из крупнейших
-          <a href="./thailand-travel" class="text-link">островов Таиланда</a>.
+          <a href="./thailand-travel" class="text-link">островов Таиланда</a>
+          .
         </p>
 
         <p class="p">
           Особенно удобен Пхукет тем, что на его территории есть международный
           аэропорт, куда летают прямые рейсы из Москвы. Есть и более
-          <a href="../" class="text-link">дешевые авиабилеты</a> из столицы,
-          например, с пересадкой. Улететь можно и из Санкт-Петербурга, и других
-          городов России.
+          <a href="../" class="text-link">дешевые авиабилеты</a>
+          из столицы, например, с пересадкой. Улететь можно и из
+          Санкт-Петербурга, и других городов России.
         </p>
 
         <p class="p">
@@ -262,17 +299,21 @@
           о жизни на острове.
         </p>
 
-        <h2 id="Подготовка-к-путешествию-в-Таиланд" class="h2">Подготовка к путешествию в Таиланд</h2>
+        <h2 id="Подготовка-к-путешествию-в-Таиланд" class="h2">
+          Подготовка к путешествию в Таиланд
+        </h2>
 
-        <h3 id="Почему-стоит-поехать-на-Пхукет" class="h3">Почему стоит поехать на Пхукет</h3>
+        <h3 id="Почему-стоит-поехать-на-Пхукет" class="h3">
+          Почему стоит поехать на Пхукет
+        </h3>
 
         <p class="p">
           Пхукет привлекает туристов не только своей красотой и отличными
           пляжами, но и развитой инфраструктурой. На остров легко добраться –
           международный аэропорт принимает рейсы со всего мира. А если вы решили
           посетить и другие
-          <a href="./thailand-travel" class="text-link">курорты Таиланда</a>, то
-          отсюда легко уехать куда угодно – с материком островной курорт
+          <a href="./thailand-travel" class="text-link">курорты Таиланда</a>
+          , то отсюда легко уехать куда угодно – с материком островной курорт
           связывает мост, не нужно плыть на пароме, как, например, до Самуи. Это
           значительно облегчает дорогу, ведь после длительного перелета, не
           хочется провести в дороге еще несколько часов, особенно, если
@@ -291,7 +332,7 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img2.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="Пхукет"
             class="section-1-img"
           />
         </div>
@@ -391,7 +432,7 @@
           </tr>
         </table>
 
-        <p class="p">
+        <p class="p-normal">
           Но сезоны различаются количеством осадков и солнечных дней, а также
           состоянием моря.
         </p>
@@ -407,7 +448,7 @@
           Пхукет стеной, а волны приносят много мусора, поэтому пляжи часто
           грязные.
         </p>
-        <p class="p">
+        <p class="p-normal">
           В таблице указано примерное количество дождливых дней в каждом месяце.
         </p>
 
@@ -468,15 +509,15 @@
           </tr>
         </table>
 
-        <p class="p">
+        <p class="p-normal">
           Обязательно учитывайте эти факторы при выборе времени для путешествия.
         </p>
 
         <h3 id="Как-добраться" class="h3">Как добраться</h3>
         <p class="p">
           Самый простой, но не самый бюджетный способ –
-          <a href="../" class="text-link">прямые рейсы «Аэрофлота»</a>. Часто
-          можно добраться с 1 пересадкой, но существенно дешевле. Чтобы
+          <a href="../" class="text-link">прямые рейсы «Аэрофлота»</a>
+          . Часто можно добраться с 1 пересадкой, но существенно дешевле. Чтобы
           подобрать оптимальный вариант – сравните все предложения авиакомпаний.
         </p>
 
@@ -487,12 +528,14 @@
           впечатление даже от самого прекрасного отпуска.
         </p>
 
-        <h3 id="Какой-пляж-Пхукета-выбрать" class="h3">Какой пляж Пхукета выбрать</h3>
+        <h3 id="Какой-пляж-Пхукета-выбрать" class="h3">
+          Какой пляж Пхукета выбрать
+        </h3>
 
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img3.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="Пхукет"
             class="section-1-img"
           />
         </div>
@@ -533,7 +576,7 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img4.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="Пхукет пляжи"
             class="section-1-img"
           />
         </div>
@@ -564,16 +607,17 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img5.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="Пхукет пляжи"
             class="section-1-img"
           />
         </div>
 
         <p class="p">
           Выбор отелей, домов, квартир и другого
-          <a href="../" class="text-link"></a> – очень большой. Подобрать
-          размещение можно на любой кошелек. В высокий сезон, то есть с декабря
-          по март, нужно бронировать заранее, особенно на новогодний период.
+          <a href="../" class="text-link"></a>
+          – очень большой. Подобрать размещение можно на любой кошелек. В
+          высокий сезон, то есть с декабря по март, нужно бронировать заранее,
+          особенно на новогодний период.
         </p>
 
         <p class="p">
@@ -661,8 +705,9 @@
             target="_blank"
             href="https://myrentacar.com/?r=2869&utm_source=travelpayouts&trace_id=4042f32320f943f4a23408789-290725"
             class="text-link"
-            >машину на прокат</a
           >
+            машину на прокат
+          </a>
           – это удобнее. Особенно для семей с детьми, или компаний, которые не
           готовы ездить на байках. Авто, конечно, проедет не везде – маленьких
           улочек в Таиланде немало, но зато можно ездить на пляж с комфортом, не
@@ -702,12 +747,14 @@
           это стоит 100 бат в час, при заказе от 7-8 часов.
         </p>
 
-        <h3 id="Достопримечательности-и-чем-заняться" class="h3">Достопримечательности и чем заняться</h3>
+        <h3 id="Достопримечательности-и-чем-заняться" class="h3">
+          Достопримечательности и чем заняться
+        </h3>
 
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img6.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="достопримечательности Пхукета"
             class="section-1-img"
           />
         </div>
@@ -730,7 +777,7 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img7.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="что посмотреть на Пхукете"
             class="section-1-img"
           />
         </div>
@@ -748,7 +795,7 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img8.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="что посмотреть на Пхукете"
             class="section-1-img"
           />
         </div>
@@ -778,7 +825,7 @@
         <div class="section-1-img-wrapper">
           <img
             src="../assets/articles/phuket/img9.jpg"
-            alt="Особенности туров на Пхукет"
+            alt="еда на Пхукете"
             class="section-1-img"
           />
         </div>
@@ -819,14 +866,16 @@
 6%2C7.747053250893453%2C98.58306884765626%2C8.143523947839062&amp;am
 p;layer=mapnik&amp;amp;marker=7.9453364618418645%2C98.349609375"
           style="border: 1px solid black"
-        ></iframe
-        ><br /><small
-          ><a
+        ></iframe>
+        <br />
+        <small>
+          <a
             href="https://www.openstreetmap.org/?mlat=7.9453&amp;amp;mlon=98.3496#map=1
 1/7.9453/98.3496"
-            >Посмотреть более крупную карту</a
-          ></small
-        >
+          >
+            Посмотреть более крупную карту
+          </a>
+        </small>
       </div>
     </section>
 
