--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -1696,7 +1696,9 @@ amp;marker=12.931992297184157%2C100.90095340000005"
 
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-    <script>
+    
+    <!-- FOR MINIMIZING CONTENT TABLE -->
+    <!-- <script>
       const content = document.getElementById("content-header");
       const container = document.querySelector(".content-title-container");
       const ol = document.querySelector(".content-title-ol-main");
@@ -1707,6 +1709,6 @@ amp;marker=12.931992297184157%2C100.90095340000005"
       };
 
       content.addEventListener("click", toggleContentTitle);
-    </script>
+    </script> -->
   </body>
 </html>
