--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 class="section-6-img"
               />
               <div class="section-6-text-container">
-                <h3 class="section-6-h3">Остров Пхукет</h3>
+                <h3 class="section-6-h3">Остров Пхукет, путеводитель от А до Я</h3>
                 <a href="./blogs/Phuket" class="section-6-a">Читать далее</a>
                 <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
@@ -476,7 +476,7 @@
             <ul class="footer-ul">
               <li class="footer-li">
                 <a href="./blogs/Phuket" class="footer-link">
-                  Отдых на Пхукете
+                  Остров Пхукет, путеводитель от А до Я
                 </a>
               </li>
               
