--- a/sitemap.html
+++ b/sitemap.html
@@ -98,7 +98,7 @@
                 </li>
                 <li class="section-1-li">
                     <a href="./blogs/Phuket" class="link-text">
-                        Отдых на Пхукете, как добраться, достопримечательности
+                        Остров Пхукет, путеводитель от А до Я
                     </a>
                     
                 </li>
@@ -188,7 +188,7 @@
             <ul class="footer-ul">
               <li class="footer-li">
                 <a href="./blogs/Phuket" class="footer-link">
-                  Отдых на Пхукете
+                    Остров Пхукет, путеводитель от А до Я
                 </a>
               </li>
               
