--- a/tours.html
+++ b/tours.html
@@ -352,7 +352,7 @@
                 class="section-6-img"
               />
               <div class="section-6-text-container">
-                <h3 class="section-6-h3">Остров Пхукет</h3>
+                <h3 class="section-6-h3">Остров Пхукет, путеводитель от А до Я</h3>
                 <a href="./blogs/Phuket" class="section-6-a">Читать далее</a>
                 <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
