updated names for phuket

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -156,7 +156,7 @@
           <span>•</span>
           <li class="section-1-li">Автор</li>
           <span>•</span>
-          <li class="section-1-li">Боря Ф</li>
+          <li class="section-1-li">Жанна B.</li>
         </ul>
 
         <div class="content-title-container">
