changes to index

--- a/tours.html
+++ b/tours.html
@@ -7,6 +7,7 @@
           content="Поиск и подбор туров от Y-Flights. Варианты от 50 лучших турагентств. Поиск, подбор и сравнение туров на любой вкус.
           Выгодные предложения на путевки с вылетом из удобного вам города."
     >
+    <!-- <link rel="stylesheet" href="./styles/tours-page/tours-page.module.css"> -->
     <link rel="stylesheet" href="./styles/tours-page/tours-page.module.css">
     <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css">
     <link
