added scriopts for footer

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -883,10 +883,10 @@ p;layer=mapnik&amp;amp;marker=7.9453364618418645%2C98.349609375"
 
     <section class="comment-section center">
       <div class="inner">
-        <h4 class="comment-section-h4">Комментарии</h4>
+        <h3 class="comment-section-h4">Комментарии</h3>
       </div>
       <div class="comment-section-inner inner">
-        <!-- <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);">No Comments Yet</h1> -->
+        
         <!-- <div class="comment-container">
                     <div class="comment-container-upper">
                         <p class="comment-name">Andrew Pinon</p>
@@ -972,7 +972,11 @@ p;layer=mapnik&amp;amp;marker=7.9453364618418645%2C98.349609375"
 
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
+
     <footer class="center footer">
+
+    </footer>
+    <!-- <footer class="center footer">
       <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
@@ -1084,11 +1088,14 @@ p;layer=mapnik&amp;amp;marker=7.9453364618418645%2C98.349609375"
 
         <div class="footer-col-3"></div>
       </div>
-    </footer>
+    </footer> -->
+
+    <link rel="import" href="footer.html">
 
     <!-- = = = = = = END OF FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
 
     <script defer src="../scripts/blogs/Phuket.js"></script>
+    <script src="../scripts/footer-scripts/footer-articles.js"></script>
 
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
