--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -1550,23 +1550,23 @@ amp;marker=12.931992297184157%2C100.90095340000005"
 
           <ul class="footer-ul">
             <li class="footer-li">
-              <a href="./blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
+              <a href="../blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
             </li>
 
             <li class="footer-li">
-              <a href="./blogs/Thailand" class="footer-link">
+              <a href="../blogs/Thailand" class="footer-link">
                 Таиланд, как добраться, где отдохнуть
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="./blogs/Bangkok" class="footer-link">
+              <a href="../blogs/Bangkok" class="footer-link">
                 Столица Таиланда – Бангкок
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="./blogs/flightticket" class="footer-link">
+              <a href="../blogs/flightticket" class="footer-link">
                 Поиск авиабилетов, отелей и туров – почему мы
               </a>
             </li>
