--- a/blogs.html
+++ b/blogs.html
@@ -135,7 +135,7 @@
         
         
          <!-- THAILAND TRAVEL BLOG PREVIEW -->
-         <a href="./blogs/thailand-travel" class="spacer-vertical-1rem">
+         <a href="./blogs/samui" class="spacer-vertical-1rem">
           <div class="blog-preview-container">
             <div class="blog-title-container">
               <h2 class="h2">Остров Самуи, путеводитель от А до Я.</h2>
@@ -155,7 +155,7 @@
               />
             </div>
             <div class="justify-wrapper">
-              <p class="p">Description:Как спланировать отдых на Самуи: подходящее время для
+              <p class="p">Как спланировать отдых на Самуи: подходящее время для
                 поездки, дешевые билеты и отели. Полезные рекомендации: транспорт, кафе,
                 погода.</p>
             </div>
