--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -86,10 +86,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
 
         <li class="phone-li">
@@ -123,10 +123,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="/" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="/" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
@@ -482,7 +482,7 @@
           <a href="../tours" class="text-link">страницу выбора туров</a>
           , вы сможете найти подходящий именно для вас. Если стоит цель
           потратить больше времени на столицу Таиланда, то лучше просто
-          <a href="../index" class="text-link">купить авиабилеты</a>
+          <a href="../" class="text-link">купить авиабилеты</a>
           , забронировать отель в Бангкоке, осмотреть его, а потом поехать на
           пляжи Сиамского залива, например, в Паттайю или в Хуа-Хин.
           <br />
@@ -490,7 +490,7 @@
 
           Отели в Таиланде и Бангкоке можно так же забронировать на нашем
           сервисе
-          <a href="../index" class="text-link">в разделе отели</a>
+          <a href="../" class="text-link">в разделе отели</a>
           . Соотношение цены и качества у них хорошее, реально найти
           номера-даблы от 1000 рублей.
           <br />
