--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -72,11 +72,11 @@
         <div class="phone-menu">
             <ul class="phone-ul">
                 <li class="phone-li">
-                    <a href="/index" class="phone-a">Авиабилеты
+                    <a href="../" class="phone-a">Авиабилеты
                     </a>
                 </li>
                 <li class="phone-li">
-                    <a href="/index" class="phone-a">Отели 
+                    <a href="../" class="phone-a">Отели 
                     </a>
                 </li>
 
@@ -106,11 +106,11 @@
                     </div>
                     <ul class="site-ul">
                         <li class="site-li">
-                            <a href="/index" class="site-a">Авиабилеты
+                            <a href="../" class="site-a">Авиабилеты
                             </a>
                         </li>
                         <li class="site-li">
-                            <a href="/index" class="site-a">Отели 
+                            <a href="../" class="site-a">Отели 
                             </a>
                         </li>
                         <li class="site-li">
