--- a/blogs/pattaya.html
+++ b/blogs/pattaya.html
@@ -74,10 +74,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
 
         <li class="phone-li">
@@ -111,10 +111,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="../" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="../" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
@@ -295,7 +295,7 @@
         <p class="section-1-p">
           Поиск отелей c самыми низкими ценами в Паттайе можно также осуществить
           на
-          <a href="../index" class="text-link">нашем сервисе</a>
+          <a href="../" class="text-link">нашем сервисе</a>
           или через гугл по запросу с названием города и словами Backpackers или
           Hostel. В таких местах ночлег может стоить менее 1000 рублей в сутки
           за тесную комнату с вентилятором вместо кондиционера или за
@@ -618,7 +618,7 @@
           Сингапур, а далее прилететь в столицу Таиланда или в курортный город
           рейсом какой-нибудь азиатской авиакомпании вроде Dragonair или Thai
           AirAsia. Для поиска дешевых авиабилетов можете воспользоваться
-          <a href="../index" class="text-link">нашим сервисом</a>
+          <a href="../" class="text-link">нашим сервисом</a>
           . Отдых в Таиланде вполне можно совместить с коротким визитом на 3-4
           дня в одну из столиц Юго-Восточной или Восточной Азии.
           <br />
