--- a/blogs/phuket-beach.html
+++ b/blogs/phuket-beach.html
@@ -76,10 +76,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
 
         <li class="phone-li">
@@ -113,10 +113,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="../" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="../" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
@@ -193,7 +193,7 @@
           Пхукета реально купить за 2-3 тыс. рублей. У популярной в регионе
           компании Air Asia часто бывают акции. Купить авиабилеты можно в нашем
           сервисе, перейдя по ссылке
-          <a href="../index" class="text-link">Y- Flights .</a>
+          <a href="../" class="text-link">Y- Flights .</a>
           <br />
           <br />
 
@@ -209,7 +209,7 @@
           электронная почта или профиль на Фэйсбуке. В интернете достаточно
           сайтов бронирования отелей, где есть отзывы и фотографии. Отель можете
           посмотреть, и если понравится, забронировать
-          <a href="../index.html" class="text-link">на нашем сайте</a>
+          <a href="../" class="text-link">на нашем сайте</a>
           .
         </p>
 
