--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -74,10 +74,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
 
         <li class="phone-li">
@@ -111,10 +111,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="../" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="../" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
@@ -198,7 +198,7 @@
           Несмотря на то, что Шри Ланка является островом, добраться до нее не
           так уж и сложно. Очень просто купить авиабилет онлайн,
           воспользовавшись
-          <a href="../index.html" class="text-link">нашим сервисом.</a>
+          <a href="../" class="text-link">нашим сервисом.</a>
         </p>
 
         <h2 class="section-1-h2">Сезоны и муссоны</h2>
@@ -253,7 +253,7 @@
           <br />
           Многие авиакомпании предлагают скидки. Купить авиабилеты дешево онлайн
           поможет
-          <a href="../index" class="text-link">наш сервис.</a>
+          <a href="../" class="text-link">наш сервис.</a>
           <br />
           <br />
           На погоду Шри-Ланки влияют сезонные тропические ветра – муссоны. Они
