--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -85,10 +85,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
 
         <li class="phone-li">
@@ -130,10 +130,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="../" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="../" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
