--- a/blogs/Vietnam.html
+++ b/blogs/Vietnam.html
@@ -71,11 +71,11 @@
         <div class="phone-menu">
             <ul class="phone-ul">
                 <li class="phone-li">
-                    <a href="/index" class="phone-a">Авиабилеты
+                    <a href="../" class="phone-a">Авиабилеты
                     </a>
                 </li>
                 <li class="phone-li">
-                    <a href="/index" class="phone-a">Отели 
+                    <a href="../" class="phone-a">Отели 
                     </a>
                 </li>
 
@@ -105,11 +105,11 @@
                     </div>
                     <ul class="site-ul">
                         <li class="site-li">
-                            <a href="/index" class="site-a">Авиабилеты
+                            <a href="../" class="site-a">Авиабилеты
                             </a>
                         </li>
                         <li class="site-li">
-                            <a href="/index" class="site-a">Отели 
+                            <a href="../" class="site-a">Отели 
                             </a>
                         </li>
                         <li class="site-li">
@@ -369,7 +369,7 @@ McDonald&#39;s. В соседних Лаосе и Вьетнаме таких п
                 </div>
                 
                 <p class="section-1-p">
-                    Она может оказаться интереснее, чем обычный тур по путевке. На <a href="../index" class="text-link">нашем сайте</a>
+                    Она может оказаться интереснее, чем обычный тур по путевке. На <a href="../" class="text-link">нашем сайте</a>
 авиабилетов найти свободные места на рейс, например, через месяц. Самолет
 приземлится в аэропорту Ханоя и до центра города ходят такси и дешевые автобусы. В
 центре можно поселиться даже без предварительной брони куда-нибудь, в отель или
