--- a/blogs/flightticket.html
+++ b/blogs/flightticket.html
@@ -74,10 +74,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
         <li class="phone-li">
           <a href="https://y-flights.com" class="phone-a">Блог</a>
@@ -110,10 +110,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="../" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="../" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="../blogs" class="site-a">Блог</a>
