--- a/tours.html
+++ b/tours.html
@@ -259,7 +259,7 @@
               />
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Остров Самуи, путеводитель от А до Я.</h3>
-                <a href="./blogs/thailand-travel" class="section-6-a">Читать далее</a>
+                <a href="./blogs/samui" class="section-6-a">Читать далее</a>
               </div>
             </div>
              <!--END OF BLOG -->
