--- a/personal-data.html
+++ b/personal-data.html
@@ -74,10 +74,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
         <li class="phone-li">
           <a href="blogs" class="phone-a">Блог</a>
@@ -137,7 +137,7 @@
           На условиях настоящего Соглашения об обработке персональных данных
           (далее – Соглашение), физическое лицо Лиясов О.О. предоставляет
           пользователям сайта, расположенного по адресу
-          <a href="./index" class="text-link">https://www.y-flights.com/</a>
+          <a href=".../" class="text-link">https://www.y-flights.com/</a>
           (далее – Сайт) и официальных представительств Y-Flights в социальных
           сетях (включая, но не ограничиваясь: ВКонтакте, Facebook, Telegram,
           Instagram), право пользования Сайтом, при помощи которых Пользователи
