--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -76,10 +76,10 @@
     <div class="phone-menu">
       <ul class="phone-ul">
         <li class="phone-li">
-          <a href="/index" class="phone-a">Авиабилеты</a>
+          <a href="../" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-          <a href="/index" class="phone-a">Отели</a>
+          <a href="../" class="phone-a">Отели</a>
         </li>
         <li class="phone-li">
           <a href="blogs" class="phone-a">Блог</a>
