--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
 
 <!-- - - - - - - - - - -  FOR TOUR FUNCTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 <script src="./scripts/index.js" ></script>
+<script src="./scripts/travelPayoutAPI.js" ></script>
 <script src="./scripts/footer-scripts/footer-main.js"></script>
     
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
