--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
           </li>
         </ul>
           <script async charset="utf-8" src="//www.travelpayouts.com/widgets/9c99103bca8edefc000ca44fb8b38b5a.js?v=1993" ></script>
+          <!-- <script async charset="utf-8" src="//www.travelpayouts.com/widgets/fa39d1df63603aae2e25a31e713ae820.js?v=2018"></script> -->
 
       </section>
       
@@ -191,12 +192,18 @@
           <div class="section-2-lower">
             <div class="section-2-left">
               <p class="section-2-p">
-                Сервис поиска билетов Y-Flights — это крупнейший поисковик
-                авиабилетов в России, СНГ и во всем мире. Сервис производит
-                сравнение всех вариантов, согласно вашему запросу и перенаправляет
-                вас на сайты авиакомпаний или турагенств.<br /><br /><br>
-                Цены на билеты и отели, которые вы получите в результате поиска
-                являются финальными, без каких либо скрытых комиссий и платежей.
+                Поиск авиабилетов и отелей Y-Flights – сервис поиска авиабилетов по всем
+направлениям России, СНГ и во всем мире. Мы находим все варианты билетов на
+самолет, согласно вашего запроса, и перенаправляем вас на сайт авиакомпании или
+агентства, где вы сможете купить билет или забронировать отель.
+<br><br>
+Сервис осуществляет поиск авиабилетов и отелей по всем авиакомпаниям и агентствам,
+что позволяет вам найти билет на самолет, как на прямой рейс, так и с пересадками. Что
+позволит найти выгодный и удобный авиабилет в одном месте.
+Наш сервис не занимается прямой продажей билетов, мы лишь предоставляем
+информацию и помогаем найти вам выгодный и удобный вариант.
+Предложенные варианты авиабилетов и отелей являются финальным, без каких-либо
+скрытых комиссий.
               </p>
             </div>
             <div class="section-2-right">
