--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="section-2-upper">
             <h2 class="section-2-h2">
               Наш сервис не продаёт авиабилеты, но он помогает подобрать самые
-              дешевые авиабиолеты бесплатно
+              дешевые авиабилеты бесплатно
             </h2>
           </div>
           <div class="section-2-lower">
@@ -301,7 +301,7 @@
           <p class="section-7-p">
             Сервис Y-Flights – создан облегчить планирование ваших путешествий и
             командировок. Обратившись в наш сервис, вы сможете найти и купить
-            дешевые авиабилеты онлайн от тысяч авиакомпаний и агентств (трэвел
+            дешевые авиабилеты онлайн от 750 авиакомпаний и 45 агентств (трэвел
             агентств) со всего мира. Большая часть покупок на нашем сервисе
             составляет авиабилеты, которые приобретаются онлайн. Но также на
             сервисе Y-Flights вы сможете подобрать и забронировать отель, узнать
