updates for new article

--- a/blogs/chto-vzyat-v-samolet.html
+++ b/blogs/chto-vzyat-v-samolet.html
@@ -147,7 +147,8 @@
           </ul>
         </div>
       </nav>
-      <h1 class="header-h1">Путеводитель по острову</h1>
+      
+      <h1 class="header-h1">Что взять с собой в самолет</h1>
     </header>
 
     <section class="center section-1">
