--- a/blogs/samui.html
+++ b/blogs/samui.html
@@ -159,7 +159,7 @@
         </ul>
 
         <!-- CONTENT-TABLE -->
-        <!-- <div class="content-title-container">
+        <div class="content-title-container">
           <span id="content-header" class="section-1-h2 spacer-vertical-1rem">
             Содержание
           </span>
@@ -228,7 +228,7 @@
               </ul>
             </li>
           </ol>
-        </div> -->
+        </div>
 
         <!-- END OF CONTENT-TABLE - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
