--- a/tours.html
+++ b/tours.html
@@ -249,6 +249,21 @@
   
           <div class="section-6-item-wrapper">
             
+               <!-- BLOG -->
+               <div class="section-6-item-container">
+                <img
+                  loading="lazy"
+                  src="./assets/images/small/plane-small.jpg"
+                  alt="подготовка к полету"
+                  class="section-6-img"
+                />
+                <div class="section-6-text-container">
+                  <h3 class="section-6-h3">Что взять с собой в самолет</h3>
+                  <a href="./blogs/chto-vzyat-v-samolet" class="section-6-a">Читать далее</a>
+                </div>
+              </div>
+               <!--END OF BLOG -->
+            
             <!-- BLOG -->
             <div class="section-6-item-container">
               <img
