--- a/personal-data.html
+++ b/personal-data.html
@@ -137,7 +137,7 @@
           На условиях настоящего Соглашения об обработке персональных данных
           (далее – Соглашение), физическое лицо Лиясов О.О. предоставляет
           пользователям сайта, расположенного по адресу
-          <a href=".../" class="text-link">https://www.y-flights.com/</a>
+          <a href="../" class="text-link">https://www.y-flights.com/</a>
           (далее – Сайт) и официальных представительств Y-Flights в социальных
           сетях (включая, но не ограничиваясь: ВКонтакте, Facebook, Telegram,
           Instagram), право пользования Сайтом, при помощи которых Пользователи
