--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -213,7 +213,7 @@
               <ul class="content-title-ul-sub">
                 <li class="content-title-li-sub margin-left-3rem">
                   3.1
-                  <a href="Трансфер-в-отель" class="text-link">
+                  <a href="#Трансфер-в-отель" class="text-link">
                     Трансфер в отель
                   </a>
                 </li>
