--- a/blogs.html
+++ b/blogs.html
@@ -400,14 +400,14 @@
         <a href="./blogs/Phuket" class="spacer-vertical-1rem">
           <div class="blog-preview-container">
             <div class="blog-title-container">
-              <h2 class="h2">Таиланд Пхукет</h2>
+              <h2 class="h2">Остров Пхукет, путеводитель от А до Я</h2>
             </div>
             <ul class="section-1-ul">
-              <li class="section-1-li">August 4, 2020</li>
+              <li class="section-1-li">September 29, 2020</li>
               <span>•</span>
               <li class="section-1-li">Автор</li>
               <span>•</span>
-              <li class="section-1-li">Боря Ф</li>
+              <li class="section-1-li">Жанна B.</li>
             </ul>
             <div class="img-wrapper-large">
               <img
@@ -418,9 +418,9 @@
             </div>
             <div class="justify-wrapper">
               <p class="p">
-                Отдых в Таиланде хорош тем, что отдыхать можно как в материковой
-                части так и на одном из островов Андаманского или
-                Южно-Китайского моря.
+                Как подготовиться к отпуску на Пхукете: лучшее время
+      для отдыха, пляж, дешевые билеты, отель и экскурсии. Что посмотреть и
+      куда сходить?
               </p>
             </div>
           </div>
